# salarycalc

./: .aspell.en.pws  .editorconfig  .eslintrc.yml  .flake8  .gitignore  .isort.cfg  .npmignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  config.yml  default.nix  elm-srcs.nix  elm.json  fetch_config_values.py  mypy.ini  netlify.toml  package-lock.json  package.json  pyproject.toml
.circleci/: config.yml
.github/actions/nix-shell/: action.yml
.github/workflows/: ci.yml  nix-gh-cache.yml
.netlify/: state.json
nix/: README.md  buildableShell.nix  default.nix  sources.json
scripts/: fetch_config_values.py
src/: Career.elm  City.elm  Config.elm  Country.elm  Main.elm  Salary.elm  SalaryCalculator.elm  index.html  index.js
tests/: Example.elm  Tests.elm  elm-verify-examples.json
website/: Makefile  custom.html  package-lock.json  package.json
